# brainy-curves

./: .gitignore  README.md  gamlss_experiments.ipynb  pyproject.toml
growth_curves/: generate_output_report.py  growth_curves.R  main.py
setup/: install_r.py
tests/: test_growth_curves.py
tests/input_data/: HSC_Normals_Biomarkers_FINAL.xlsx  HSC_Tumour_Biomarkers_FINAL.xlsx
tests/test_output/: results.pkl
