[tool.poetry]
name = "gamlss-growth-curves"
version = "0.1.0"
description = ""
authors = ["Karissa Chan <84393649+KarissaChan1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
